--- a/templates/basic.html
+++ b/templates/basic.html
@@ -64,7 +64,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="static\image1.jpg" class="d-block w-100" alt="..." height="792">
+        <img src="static\image1.jpg" class="d-block w-100" alt="..." style="  background-position: center center; background-repeat: no-repeat; background-size: contain; width: 100vw; height: 100vh;">
         <div class="carousel-caption d-none d-md-block">
           <h1>Did you know?</h1>
           <p><h4>The survival rate in titanic disaster was only 8.3%</h4></p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> 
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="static\check4.jpg" class="d-block w-100" alt="..." height="792">
+        <img src="static\check4.jpg" class="d-block w-100" alt="..." style="  background-position: center center; background-repeat: no-repeat; background-size: contain; width: 100vw; height: 100vh;">
         <div class="carousel-caption d-none d-md-block">
           <h1>If you were on titanic...</h1>
           <p><h4>Would you survive the disaster?</h4></p>
