--- a/templates/not_survive.html
+++ b/templates/not_survive.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel = "stylesheet" href = "static\footer.css" >
 
-    <title>Document</title>
+    <title>Result</title>
     <style> 
         .fa {
         padding: 20px;
